Fixed horizontal scrolling issue

--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,5 @@ html, body {
         position: absolute;
         top: 20px; left: 290px; right: 20px;
         margin: auto;
-        overflow-x: hidden;
     }
 }
